--- a/p2p/Makefile.rocm
+++ b/p2p/Makefile.rocm
@@ -34,7 +34,7 @@ LDFLAGS         = -L$(HIP_LIB) -lamdhip64 \
 P2P_PYTHON_EXT   := p2p$(PYEXT)
 P2P_SHARED_LIB := libuccl_p2p.so
 RDMA_PLUGIN_LIB := librdma_plugin.a
-SOURCES := engine.cc pybind_engine.cc
+SOURCES := engine.cc engine_pybind.cc
 OBJECTS := $(SOURCES:.cc=.o)
 CAPI_SOURCE := uccl_engine.cc
 CAPI_HEADER := uccl_engine.h
