--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         set -e
 
-        DIRECTORIES=("collective" "ep" "misc" "p2p" "include")
+        DIRECTORIES=("collective" "ep" "experimental" "p2p" "include")
         EXTENSIONS=("cpp" "cxx" "cc" "h" "hpp" "cu" "cuh")
         EXCLUDE=("collective/afxdp/lib")
 
