--- a/p2p/Makefile.rocm
+++ b/p2p/Makefile.rocm
@@ -1,5 +1,10 @@
 # Makefile for UCCL P2P Engine pybind11 project
 
+# EFA optional integration
+USE_EFA ?= $(shell echo $${USE_EFA:-0})
+# IB optional integration
+USE_IB ?= $(shell echo $${USE_IB:-0})
+
 # Compiler and flags
 HIP_HOME?=/opt/rocm
 HIP_INC  := $(HIP_HOME)/include
@@ -7,7 +12,13 @@ HIP_LIB  := $(HIP_HOME)/lib
 CONDA_LIB_HOME?=/usr/lib
 RDMA_HOME := ../collective/rdma
 CXX := g++
-CXXFLAGS_TRANS := -DUCCL_P2P_USE_EFA -DUCCL_P2P_USE_RDMA
+
+ifeq ($(USE_EFA),1)
+	CXXFLAGS_TRANS := -DUCCL_P2P_USE_RDMA
+else ifeq ($(USE_IB),1)
+	CXXFLAGS_TRANS := -DUCCL_P2P_USE_RDMA -DUCCL_P2P_USE_IB
+endif
+
 CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(HIP_INC) \
 	-Wno-pointer-arith -Wno-sign-compare -Wno-unused-variable \
 	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -Wl,-rpath=${CONDA_LIB_HOME} -I${CONDA_LIB_HOME}/../include \
