--- a/p2p/Makefile.rocm
+++ b/p2p/Makefile.rocm
@@ -19,7 +19,7 @@ else ifeq ($(USE_IB),1)
 	CXXFLAGS_TRANS := -DUCCL_P2P_USE_RDMA -DUCCL_P2P_USE_IB
 endif
 
-CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(HIP_INC) \
+CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I. -I../include -I$(RDMA_HOME) -I$(HIP_INC) \
 	-Wno-pointer-arith -Wno-sign-compare -Wno-unused-variable \
 	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -Wl,-rpath=${CONDA_LIB_HOME} -I${CONDA_LIB_HOME}/../include \
 	$(CXXFLAGS_TRANS)
