[P2P] Adding p2p-native RDMA support for both EFA and non-EFA (IB) (#597)
* Fix readme.

* Remove hardcode macro.

* WIP. IBRC for p2p.

* USE_QPEX.

* Nits.

* Fix qp init bug.

* IBRC now is working on new p2p arch.

* Format code.

* Inlining small metadata.

* Remove unused macro.

* Rename macro.

* Rename efa folder to rdma.

* Refactor p2p

* Format code.

* Nits.

* Nits.

* Fix Makefile.

* Nits.

* Nits.

* Nits.

* fix p2p on efa

* deprecate p2p chunk size and entropy, add UCCL_IB_GID_INDEX

* change kNICContextNumber to 4 to allow 4 EFA nics per GPU

* renaming a bit

---------

Co-authored-by: YangZhou1997 <yangzhou.rpc@gmail.com>

--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -4,6 +4,8 @@
 USE_TCPX ?= $(shell echo $${USE_TCPX:-0})
 # EFA optional integration
 USE_EFA ?= $(shell echo $${USE_EFA:-0})
+# IB optional integration
+USE_IB ?= $(shell echo $${USE_IB:-0})
 
 # Compiler and flags
 CUDA_HOME ?= /usr/local/cuda
@@ -13,22 +15,25 @@ RDMA_HOME := ../collective/rdma
 EFA_HOME ?= /opt/amazon/efa
 
 # Building with the following settings:
-INC = -I./ -I$(CUDA_HOME)/include 
+INC = -I./ -I$(CUDA_HOME)/include
 LIBS = -L ${CUDA_HOME}/lib64 -libverbs -lcudart -lcuda -lpthread -lglog -lgflags -lgtest -lz -lelf
 LIBS2 =
 
 CXX := g++
-CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(CUDA_INC) \
+CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I. -I../include -I$(RDMA_HOME) -I$(CUDA_INC) \
 	-Wno-pointer-arith -Wno-sign-compare -Wno-unused-variable \
-	-Wl,-rpath=/usr/lib/x86_64-linux-gnu $(CXXFLAGS_EFA)
+	-Wl,-rpath=/usr/lib/x86_64-linux-gnu
 
 ifeq ($(USE_TCPX),1)
 	CXXFLAGS += -DUCCL_P2P_USE_TCPX
 	LIBS2 += -lglog -lgflags -lpthread -ldl
 else ifeq ($(USE_EFA),1)
-	CXXFLAGS += -DUCCL_P2P_USE_EFA
+	CXXFLAGS += -DUCCL_P2P_USE_NATIVE_RDMA
 	INC += -I${EFA_HOME}/include
 	LIBS += -L ${EFA_HOME}/lib -lefa
+else ifeq ($(USE_IB),1)
+	CXXFLAGS += -DUCCL_P2P_USE_NATIVE_RDMA -DUCCL_P2P_USE_IB
+	LIBS += -libverbs
 else
 	LIBS2 += -lglog -lgflags -lgtest -lz -lelf -lpthread -libverbs
 endif
