Switch USE_IB to USE_EFA to pass build-on-gpu-host.

--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -4,8 +4,6 @@
 USE_TCPX ?= $(shell echo $${USE_TCPX:-0})
 # EFA optional integration
 USE_EFA ?= $(shell echo $${USE_EFA:-0})
-# IB optional integration
-USE_IB ?= $(shell echo $${USE_IB:-0})
 
 # Compiler and flags
 CUDA_HOME ?= /usr/local/cuda
@@ -28,11 +26,9 @@ ifeq ($(USE_TCPX),1)
 	CXXFLAGS += -DUCCL_P2P_USE_TCPX
 	LIBS2 += -lglog -lgflags -lpthread -ldl
 else ifeq ($(USE_EFA),1)
+	CXXFLAGS += -DUCCL_P2P_USE_EFA
 	INC += -I${EFA_HOME}/include
 	LIBS += -L ${EFA_HOME}/lib -lefa
-else ifeq ($(USE_IB),1)
-	CXXFLAGS += -DUCCL_P2P_USE_IB
-	LIBS += -libverbs
 else
 	LIBS2 += -lglog -lgflags -lgtest -lz -lelf -lpthread -libverbs
 endif
