fix bug and add multi-fifos benchmark

--- a/experimental/eccl/src/device/Makefile
+++ b/experimental/eccl/src/device/Makefile
@@ -17,15 +17,18 @@ COMMON_CU  := operator.cu
 
 TEST_SRC   := test_persistent.cc
 BENCH_SRC  := bench_fifo.cu
+BENCH_FULL_SRC  := bench_full_fifo.cu
 
 COMMON_OBJ := $(COMMON_CPP:.cc=.o) $(COMMON_CU:.cu=.o)
 TEST_OBJ   := $(TEST_SRC:.cc=.o)
 BENCH_OBJ  := $(BENCH_SRC:.cu=.o)
+BENCH_FULL_OBJ  := $(BENCH_FULL_SRC:.cu=.o)
 
 TEST_BIN  := test_persistent
 BENCH_BIN := bench_fifo
+BENCH_FULL_BIN := bench_full_fifo
 
-ALL_BIN   := $(TEST_BIN) $(BENCH_BIN)
+ALL_BIN   := $(TEST_BIN) $(BENCH_BIN) $(BENCH_FULL_BIN)
 
 
 .PHONY: all test bench clean
@@ -34,7 +37,7 @@ all: $(ALL_BIN)
 
 test: $(TEST_BIN)
 
-bench: $(BENCH_BIN)
+bench: $(BENCH_BIN) $(BENCH_FULL_BIN)
 
 %.o: %.cc
 	$(CXX) -c $< -o $@ $(CXXFLAGS) $(INCLUDES)
@@ -46,6 +49,9 @@ $(TEST_BIN): $(COMMON_OBJ) $(TEST_OBJ)
 	$(NVCC) $^ -o $@ $(LIBS) $(RPATH) $(NVCCFLAGS)
 
 $(BENCH_BIN): $(COMMON_OBJ) $(BENCH_OBJ)
+	$(NVCC) $^ -o $@ $(LIBS) $(RPATH) $(NVCCFLAGS)
+
+$(BENCH_FULL_BIN): $(COMMON_OBJ) $(BENCH_FULL_OBJ)
 	$(NVCC) $^ -o $@ $(LIBS) $(RPATH) $(NVCCFLAGS)
 
 clean:
